[package]
name = "node-executor"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
node-primitives = { version = "2.0.0", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
node-runtime = { version = "2.0.2", path = "../../runtime" }
sc-executor = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
sp-core = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
sp-keystore = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
sp-io = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
sp-state-machine = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
sp-trie = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
trie-root = "0.16.0"
frame-benchmarking = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
frame-system = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
node-testing = { version = "3.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
pallet-contracts = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
pallet-grandpa = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
pallet-im-online = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
pallet-indices = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
pallet-session = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
pallet-timestamp = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
pallet-transaction-payment = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
pallet-treasury = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
sp-application-crypto = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
sp-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
sp-runtime = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
sp-externalities = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
substrate-test-client = { version = "2.0.0", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
wat = "1.0"
futures = "0.3.9"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
